 * new make targets to compile & install server & clients separately
 * autoconf fixes: check for pkg-config macros
 + new driver irtrans (Phant0m / Aron Parsons)
 + serialVFD driver: support Siemens/Wincor Nixdorf BA63/66 (Stefan Herdler)
 + new client lcdident.pl (Ethan Dicks)
 * server: prevent stalling if time goes backwards (M. Vallevand)

v.0.5.2
 * fix switching on/off the Load screen in lcdproc client using the menu
 * refactor adv_bignum: support height > 4, loadable chars with offset
 * ged rid of global variables buffer & tmp in lcdproc client
 + add init-script templates for LSB 3.x conforming systems
 * fix cellwidth in iMon driver
 + graphics character support in iMon driver (John Saunders)
 * try harder to find a shell in lcdexec
 + big number support in CwLnx driver via bignum library
 * do not copy more bytes than reserved in get_fs() in lcdproc's machine_*.c
 * update lcdproc's About screen with credits
 * fixes to ula200 build environment and documentation (B. Walle)
 * update g15 driver to be compatible with g15daemon > 1.2 (Anthony J. Mirabella)
 * allow compiling with LDFLAG "--as-needed" (Robert Buchholz)
 * optimize MtxOrb flush()
 * make MtxOrb use Brightness and OffBrightness like CFontzPacket
 * make Brightness & OffBrightness run-time configurable in CFontz & MtxOrb
 * add support for Iface and ProcSize screens for OS X / Darwin (Eric Pooch)
 * update & fix serialVFD driver (Stefan Herdler)
 + Hitachi SP14Q002 support & ConnectionType setting for sed1330 (Benjamin Wiedmann)
 * replace obsolete index() by strchr() (Guillaume LECERF)
 * fixes for CwLinux driver (Gideon Tsang)
 + new ConnectionType vdr-wakeup in hd44780 driver (originally Frank Jepsen)
 * fixes for the hd44780-serial drivers (Matteo Pillon)
 + new options for the hd44780 driver (Frank Jepsen)
 + new driver for text based serial Point of Sale displays (Eric Pooch)
 + new 2-line bignum mode using 6 user defined characters (Robin Gilks)